[package]
name = "zk-transit"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bellman = "0.14.0"
bincode = "1.3.3"
bls12_381 = "0.8.0"
pairing = "0.23.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"

[[bin]]
name = "zk_proof"
path = "src/zk_proof.rs"

[[bin]]
name = "server"
path = "src/server.rs"
